Improve scrolling UX by avoiding scrollbars in code blocks
Suggested by Akshay Kadam in https://goo.gl/QM3YAz. Thanks so much!

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,6 +1,3 @@
-pre {
-  max-height: 500px;
-}
 .gatsby-highlight {
   margin-bottom: 1.75rem;
 }
